--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<script>window.open("https://discord.gg/N6ZfaZt4NW", "_self")</script>
+<!DOCTYPE html>
+<html>
+  <script>window.open("https://discord.gg/N6ZfaZt4NW", "_self")</script>
+</html>
