--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title id="languageTitle">SmoothCloudServices</title>
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://cdn.smoothcloudservices.eu/image/logo/1024x1024.png"
-    />
+    <title id="languageTitle">SmoothCloud</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -33,7 +28,7 @@
       </div>
     </div>
     <div class="overlay">
-      <img src="https://cdn.smoothcloudservices.eu/image/logo/1024x1024.png" />
+      <img src="" alt="Logo coming soon..." />
       <h1>
         <span class="large" id="pageTitle"
           >Welcome to SmoothCloud!</span
@@ -46,10 +41,10 @@
     <div>
       <button
         class="logo-github"
-        onclick="window.open('https://github.com/SmoothCloudServices', '_blank')"
+        onclick="window.open('https://github.com/SmoothCloudEU', '_blank')"
       >
         <img
-          src="https://cdn.smoothcloudservices.eu/image/social/github.png"
+          src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
           alt="Logo"
           class="logo"
         />
@@ -59,7 +54,7 @@
         onclick="window.open('https://discord.smoothcloudservices.eu/', '_blank')"
       >
         <img
-          src="https://cdn.smoothcloudservices.eu/image/social/discord.png"
+          src="https://freelogopng.com/images/all_img/1691730767discord-logo-transparent.png"
           alt="Logo"
           class="logo"
         />
