--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </button>
       <button
         class="logo-discord"
-        onclick="window.open('https://discord.smoothcloudservices.eu/', '_blank')"
+        onclick="window.open('https://discord.gg/N6ZfaZt4NW', '_blank')"
       >
         <img
           src="https://freelogopng.com/images/all_img/1691730767discord-logo-transparent.png"
