added new images & removed not used images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title id="languageTitle">SmoothCloud</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="data/logo_1x1.png" type="image/png" />
   </head>
   <body>
     <div class="language-show">
@@ -19,36 +20,26 @@
       </div>
     </div>
     <div class="overlay">
-      <img src="" alt="Logo coming soon..." />
+      <img src="data/logo.png" alt="Logo coming soon..." />
       <h1>
-        <span class="large" id="pageTitle"
-          >Welcome to SmoothCloud!</span
-        >
+        <span class="large" id="pageTitle">Welcome to SmoothCloud!</span>
       </h1>
       <p id="wartungsText">
         This Site is currently in maintenance. Please try again later!
       </p>
     </div>
-    <div>
+    <div class="icons">
       <button
-        class="logo-github"
+        class="icon"
         onclick="window.open('https://github.com/SmoothCloudEU', '_blank')"
       >
-        <img
-          src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
-          alt="Logo"
-          class="logo"
-        />
+        <img src="data/github.png" alt="Logo" class="logo" />
       </button>
       <button
-        class="logo-discord"
+        class="icon"
         onclick="window.open('https://discord.gg/N6ZfaZt4NW', '_blank')"
       >
-        <img
-          src="https://freelogopng.com/images/all_img/1691730767discord-logo-transparent.png"
-          alt="Logo"
-          class="logo"
-        />
+        <img src="data/discord.png" alt="Logo" class="logo" />
       </button>
     </div>
     <script src="translate.js"></script>
