started with new language system

--- a/index.html
+++ b/index.html
@@ -13,17 +13,27 @@
         <img id="header-logo" src="/public/image/logo_1x1.png" alt="" />
         <p>SmoothCloud</p>
       </div>
-      <nav>
-        <a class="link" href="#features">Features</a>
-        <a class="link" href="#faq">FAQ</a>
-        <a class="link" href="https://docs.smoothcloud.eu">Documentation</a>
-        <a class="link" href="/download">Download</a>
-        <a
-          class="link highlighted"
-          href="https://docs.smoothcloud.eu/getting-started"
-          >Getting Started</a
-        >
-      </nav>
+      <div>
+        <nav>
+          <a class="link" href="#features">Features</a>
+          <a class="link" href="#faq">FAQ</a>
+          <a class="link" href="https://docs.smoothcloud.eu">Documentation</a>
+          <a class="link" href="/download">Download</a>
+          <a
+            class="link highlighted"
+            href="https://docs.smoothcloud.eu/getting-started"
+            >Getting Started</a
+          >
+        </nav>
+        <div>
+          <img
+            id="current-language-icon"
+            src="/public/image/icon/american.png"
+            alt=""
+          />
+          <div id="language-select"></div>
+        </div>
+      </div>
     </header>
     <main></main>
     <footer></footer>
