--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
           <a class="link" href="#features">Features</a>
           <a class="link" href="#faq">FAQ</a>
-          <a class="link" href="https://docs.smoothcloud.eu">Documentation</a>
+          <a class="link" href="/docs">Documentation</a>
           <a class="link" href="/download">Download</a>
           <a
             class="link highlighted"
